--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@relayprotocol/relay-kit-ui": "^2.17.5",
     "@socket.tech/bungee": "^0.16.0",
     "@socket.tech/plugin": "^1.3.8",
+    "@vercel/node": "^5.5.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
