--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,5 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": "vite",
-  "rewrites": [
-    {
-      "source": "/api/bungee-proxy/:path*",
-      "destination": "/api/bungee-proxy"
-    }
-  ]
+  "framework": "vite"
 }
